fix profile